# KR5

./: README.md  classes.py  func.py  main.py  pyproject.toml  queries.sql
