[tool.poetry]
name = "cw-5"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"
packages = [{include = "cw_5"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
